CHANGES IN VERSION 1.27.5
-------------------------

UTILITIES

    o LZ4 updated to v1.9.3 from v1.9.2


CHANGES IN VERSION 1.27.4
-------------------------

NEW FEATURES

    o new function `is.sparse.gdsn()`

UTILITIES

    o a new component 'is.sparse' in `objdesp.gdsn()`

    o `options(gds.verbose=TRUE)` to show additional information


CHANGES IN VERSION 1.26.1
-------------------------

UTILITIES

    o comply with the R devel (> v4.0.3) to work with factor variables in
      `apply.gdsn()`


CHANGES IN VERSION 1.24.1
-------------------------

UTILITIES

    o 'show' option in `print.gds.class()` for array preview


CHANGES IN VERSION 1.24.0
-------------------------

NEW FEATURES

    o new option 'allow.error' in `openfn.gds()` for data recovery

    o new option 'log.only' in `diagnosis.gds()`

    o new C functions `GDS_Node_Unload()` and `GDS_Node_Load()` in R_GDS.h

    o new sparse array data types in GDS (SparseReal32, SparseReal64,
      SparseInt8, SparseInt16, SparseInt32, SparseInt64, SparseUInt8,
      SparseUInt16, SparseUInt32, SparseUInt64)

    o the opened gds file will be closed when the object is garbage collected

UTILITIES

    o zlib updated to v1.2.11 from v1.2.8

    o xz updated to v5.2.4 from v5.2.3

    o LZ4 updated to v1.9.2 from v1.7.5

    o `showfile.gds()` does not return the object of 'gds.class'

    o new 'nmax' and 'depth' in `print.gdsn.class()` and `print.gds.class()`


CHANGES IN VERSION 1.22.0
-------------------------

NEW FEATURES

    o a new function `unload.gdsn()` to unload a GDS node from memory

UTILITIES

    o add '#pragma GCC optimize("O3")' to some of C++ files when GCC is used

    o add the compiler information in `system.gds()`

    o change the file name "vignettes/gdsfmt_vignette.Rmd" to "vignettes/gdsfmt.Rmd",
      so `vignette("gdsfmt")` can work directly

BUG FIXES

    o avoid the segfault if the data type is not registered internally
