@@ -5,6 +5,9 @@ UTILITIES
 
     o LZ4 updated to v1.9.3 from v1.9.2
 
+    o work around with factor variables if less-than-32-bit integers are stored
+      in `apply.gdsn()`
+
 
 CHANGES IN VERSION 1.27.4
 -------------------------
